@@ -17,6 +17,7 @@
 package com.echothree.control.user.workflow.server.command;
 
 import com.echothree.control.user.workflow.common.form.GetWorkflowEntityStatusesForm;
+import com.echothree.control.user.workflow.common.form.GetWorkflowEntityTypesForm;
 import com.echothree.control.user.workflow.common.result.WorkflowResultFactory;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
@@ -26,10 +27,12 @@ import com.echothree.model.control.workflow.server.logic.WorkflowLogic;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.model.data.workflow.server.entity.Workflow;
 import com.echothree.model.data.workflow.server.entity.WorkflowEntityStatus;
+import com.echothree.model.data.workflow.server.entity.WorkflowEntityType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
@@ -40,22 +43,22 @@ import java.util.Collections;
 import java.util.List;
 
 public class GetWorkflowEntityStatusesCommand
-        extends BaseMultipleEntitiesCommand<WorkflowEntityStatus, GetWorkflowEntityStatusesForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<WorkflowEntityStatus, GetWorkflowEntityStatusesForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                    new SecurityRoleDefinition(SecurityRoleGroups.WorkflowEntityStatus.name(), SecurityRoles.List.name())
-                    )))
-                )));
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.WorkflowEntityStatus.name(), SecurityRoles.List.name())
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("WorkflowName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetWorkflowEntityStatusesCommand */
@@ -66,13 +69,25 @@ public class GetWorkflowEntityStatusesCommand
     Workflow workflow;
 
     @Override
-    protected Collection<WorkflowEntityStatus> getEntities() {
+    protected void handleForm() {
         var workflowName = form.getWorkflowName();
-        Collection<WorkflowEntityStatus> workflowEntityStatuses = null;
 
         workflow = WorkflowLogic.getInstance().getWorkflowByName(this, workflowName);
+    }
 
-        if(!this.hasExecutionErrors()) {
+    @Override
+    protected Long getTotalEntities() {
+        var workflowControl = Session.getModelController(WorkflowControl.class);
+
+        return hasExecutionErrors() ? null :
+                workflowControl.countWorkflowEntityStatusesByWorkflow(workflow);
+    }
+
+    @Override
+    protected Collection<WorkflowEntityStatus> getEntities() {
+        Collection<WorkflowEntityStatus> workflowEntityStatuses = null;
+
+        if(!hasExecutionErrors()) {
             var workflowControl = Session.getModelController(WorkflowControl.class);
 
             workflowEntityStatuses = workflowControl.getWorkflowEntityStatusesByWorkflow(workflow);
